2012-12-16  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: MP4 reader: Fixed handling of edit lists if
	the edit list is used to adjust the track's timecodes by a fixed
	amount (either positive or negative). Fixes #780.

2012-12-10  Moritz Bunkus  <moritz@bunkus.org>

	* mkvpropedit: bug fix: Giving a non-existent file name in tags
	mode will result in a proper error message. Fixes #806.

2012-12-09  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.9.0.

	* mkvmerge: bug fix: Fixed reading seek position values bigger
	than 2 GB. Fixes #805.

2012-12-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed appending non-empty tracks to empty
	tracks. Fixes #793.

	* mkvmerge: bug fix: mkvmerge will now keep timecodes of PCM
	tracks from source files if they're available. Fixes #804.

2012-12-05  Moritz Bunkus  <moritz@bunkus.org>

	* all: bug fix: EBML void elements will be skipped when reading
	structures from XML (e.g. chapters). Fixes #802.

2012-12-02  Moritz Bunkus  <moritz@bunkus.org>

	* all: bug fix: EBML void elements will be skipped when saving
	structures to XML (e.g. chapters). Fixes #801.

	* mkvmerge: bug fix: Fixed reading linked seek heads in Matroska
	files.

2012-11-13  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed reading file names containing a '%' from a
	.mmg settings file (both normally saved files and the job queue
	files). Fixes #795.

2012-10-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Dirac video code: Added four more
	pre-defined video types from Dirac spec v2.2.2 and two from Dirac
	Pro.

2012-09-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: enhancement: Added options for turning off
	writing "CueDuration" elements ("--engage no_cue_duration") and
	"CueRelativePosition" elements ("--engage
	no_cue_relative_positions").

	* mkvmerge: new feature: The element "CueRelativePosition" is
	written for all cue entries.
