@@ -222,3 +222,4 @@ T_373reading_linked_seek_heads:f7909baf4937d859f92cd56add45ad57:passed:20121202-
 T_374extract_chapters_with_ebml_void:ok:passed:20121202-173807:0.024994195
 T_375keep_pcm_timecodes:07b82348a0a4898792b578620c60d91c:passed:20121208-154352:0.116051301
 T_376append_empty_tracks:bb24fbaeed4803db5c3fb5cf86c8f11f-bdee9f14cf713a27ca6f7295215fce57-73604907be7a3b196a1bbe9cc0af11f1:passed:20121208-190510:1.098954043
+T_377mp3_skip_id3_properly:dfef05c8596cafafeb90de5bfa86b54c:passed:20121216-212310:0.042343772
